--- a/index.html
+++ b/index.html
@@ -1,21 +1,97 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+<html lang="es">
 
-    <title>Project</title>
-  </head>
-  <body>
-    <header>
-      <div id="nombredelequipo">
-        <h1>NOMBRE DEL EQUIPO</h1>
-      </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="./css/reset.css" />
+  <link rel="stylesheet" href="./css/style.css" />
+
+  <title>Equipo Cabra</title>
+</head>
+
+<body>
+  <header>
+    <!--imagen de fondo de la cabecera(background)-->
+    <div id="nombredelequipo">
+      <h1>Nombre de equipo</h1>
+    </div>
+    <div class="container">
       <nav id="enlaces">
-        <slack>EQUIPO QUIENES SOMOS CONTACTO</slack>
-      </nav>
-    </header>
-  </body>
+        <ul>
+          <li><a href="./index.html#equipo" class="box">Equipo</a>
+          <li><a href="./index.html#quienessomos" class="box">Quiénes somos</a></li>
+          <li><a href="./contacto.html" target="blank" class="box"></a></li>
+        </ul>
+
+
+    </div>
+    </nav>
+  </header>
+  <main>
+    <section>
+      <h2 class="lema">Frase con nuestro lema</h2>
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur obcaecati unde nemo eum architecto,
+      aspernatur illum autem porro molestias eveniet, in sit soluta, incidunt illo beatae earum hic voluptates
+      ipsam!Lorem Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda magnam, fugiat aliquam velit
+      commodi facilis, libero officia quo eius numquam nihil pariatur mollitia explicabo? Ex repellendus delectus a
+      repellat vero. Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit neque quas possimus architecto veniam
+      obcaecati sequi! Quasi nobis ea voluptates assumenda quia eius fuga illum non quis, harum quisquam ipsam!
+    </section>
+    <section>
+      <h1 id="equipo">Equipo</h1>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum libero tenetur placeat id nemo, aut sed consequatur
+      expedita eum ex asperiores adipisci. Aut odit accusamus natus necessitatibus ipsa tempore recusandae!
+    </section>
+    <section>
+      <h2>Fortalezas</h2>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum libero tenetur placeat id nemo, aut sed consequatur
+      expedita eum ex asperiores adipisci. Aut odit accusamus natus necessitatibus ipsa tempore
+      <h2>Debilidades</h2>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum libero tenetur placeat id nemo, aut sed consequatur
+      expedita eum ex asperiores adipisci. Aut odit accusamus natus necessitatibus ipsa tempore
+    </section>
+
+    <section>
+      <h1 id="quienessomos">Quiénes somos</h1>
+      <img src="" alt="fotomai">
+
+      Maitane
+      <!--descripción de Mai-->
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum libero tenetur placeat id nemo, aut sed consequatur
+      expedita eum ex asperiores adipisci. Aut odit accusamus natus necessitatibus ipsa tempore
+      <!--Redes sociales-->
+      <img src="" alt="fotoana">
+      Ana
+      <!--descripción de Ana-->
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum libero tenetur placeat id nemo, aut sed consequatur
+      expedita eum ex asperiores adipisci. Aut odit accusamus natus necessitatibus ipsa tempore
+      <!--Redes sociales-->
+      <img src="" alt="Paloma">
+      Paloma
+      <!--descripción de Paloma-->
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum libero tenetur placeat id nemo, aut sed consequatur
+      expedita eum ex asperiores adipisci. Aut odit accusamus natus necessitatibus ipsa tempore
+      <!--Redes sociales-->
+      <img src="" alt="Irene">
+      Irene
+      <!--descripción de Irene-->
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum libero tenetur placeat id nemo, aut sed consequatur
+      expedita eum ex asperiores adipisci. Aut odit accusamus natus necessitatibus ipsa tempore
+    </section>
+
+  </main>
+  <footer>
+    <h4>Nombre del grupo &copy;2018 </h4>
+    <div>
+      <h5><a href="./index.html#equipo" class="box">Equipo</a></h5>
+      <h5><a href="./index.html#quienessomos" class="box">Quiénes somos</a></h5>
+      <h5><a href="./contacto.html" target="blank" class="box">Contacto</a></h5>
+    </div>
+    <img class="logo" src="" alt="logo Adalab" />
+
+  </footer>
+</body>
+
 </html>
