--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <div class="container">
       <nav id="enlaces">
         <ul>
-          <li><a href="./index.html#equipo" class="box">Equipo</a>
+          <li><a href="./index.html#equipo" class="box">Equipo</a></li>
           <li><a href="./index.html#quienessomos" class="box">Quiénes somos</a></li>
-          <li><a href="./contacto.html" target="blank" class="box"></a></li>
+          <li><a href="./contacto.html" target="blank" class="box">Contacto</a></li>
         </ul>
 
 
@@ -55,7 +55,7 @@
 
     <section>
       <h1 id="quienessomos">Quiénes somos</h1>
-      <img src="" alt="fotomai">
+      <img src="./images/FotoMai.jpg" alt="fotomai">
 
       Maitane
       <!--descripción de Mai-->
@@ -68,13 +68,13 @@
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum libero tenetur placeat id nemo, aut sed consequatur
       expedita eum ex asperiores adipisci. Aut odit accusamus natus necessitatibus ipsa tempore
       <!--Redes sociales-->
-      <img src="" alt="Paloma">
+      <img src="./images/fotoperfilpaloma.jpg" alt="Paloma">
       Paloma
       <!--descripción de Paloma-->
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum libero tenetur placeat id nemo, aut sed consequatur
       expedita eum ex asperiores adipisci. Aut odit accusamus natus necessitatibus ipsa tempore
       <!--Redes sociales-->
-      <img src="" alt="Irene">
+      <img src="./images/IreneGonzalezPinilla.jpg" alt="Irene"/>
       Irene
       <!--descripción de Irene-->
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum libero tenetur placeat id nemo, aut sed consequatur
