--- a/index.html
+++ b/index.html
@@ -79,15 +79,25 @@
         adipisci. Aut odit accusamus natus necessitatibus ipsa tempore
         recusandae!
       </section>
-      <section>
-        <h2>Fortalezas</h2>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum libero
-        tenetur placeat id nemo, aut sed consequatur expedita eum ex asperiores
-        adipisci. Aut odit accusamus natus necessitatibus ipsa tempore
-        <h2>Debilidades</h2>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum libero
-        tenetur placeat id nemo, aut sed consequatur expedita eum ex asperiores
-        adipisci. Aut odit accusamus natus necessitatibus ipsa tempore
+      <section class="fortalezas">
+        <article class="articulo">
+          <h2 class="title">Fortalezas</h2>
+          <p class="parrafo">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum
+            libero tenetur placeat id nemo, aut sed consequatur expedita eum ex
+            asperiores adipisci. Aut odit accusamus natus necessitatibus ipsa
+            tempore
+          </p>
+        </article>
+        <article class="articulo">
+          <h2 class="title">Debilidades</h2>
+          <p class="parrafo">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum
+            libero tenetur placeat id nemo, aut sed consequatur expedita eum ex
+            asperiores adipisci. Aut odit accusamus natus necessitatibus ipsa
+            tempore
+          </p>
+        </article>
       </section>
 
       <section class="quienessomos">
@@ -143,18 +153,13 @@
       </section>
     </main>
 
-    <footer>
-      <hr />
-      <h4>Nombre del grupo &copy;2018</h4>
-      <div>
-        <h5><a href="./index.html#equipo" class="box">Equipo</a></h5>
-        <h5>
-          <a href="./index.html#quienessomos" class="box">Quiénes somos</a>
-        </h5>
-        <h5>
-          <a href="./contacto.html" target="blank" class="box">Contacto</a>
-        </h5>
-      </div>
+    <footer class="footer">
+      <h4 class="copy">Equipo Cabra &copy;2018</h4>
+      <nav class="navegadorfooter">
+        <a href="./index.html#equipo">Equipo</a>
+        <a href="./index.html#quienessomos">Quiénes somos</a>
+        <a href="./contacto.html" target="blank">Contacto</a>
+      </nav>
       <img class="logo" src="" alt="logo Adalab" />
     </footer>
   </body>
