reset css color:inherit

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       }
     </style>
     <!--se puede poner en css?-->
-    <style type="text/css">
+    <!--  <style type="text/css">
       a {
         color: #fffcfd;
       }
@@ -34,7 +34,7 @@
       a:hover {
         color: #fdfdfd;
       }
-    </style>
+    </style>-->
   </head>
 
   <body>
