linea de hipervínculo quitada en reset.css

--- a/index.html
+++ b/index.html
@@ -20,21 +20,7 @@
         font-family: "Rubik";
       }
     </style>
-    <!--se puede poner en css?-->
-    <!--  <style type="text/css">
-      a {
-        color: #fffcfd;
-      }
-      a:visited {
-        color: #fff9fd;
-      }
-      a:active {
-        color: #fcfcfc;
-      }
-      a:hover {
-        color: #fdfdfd;
-      }
-    </style>-->
+    <!--He eliminado el style que había para suplir el estilo de los enlaces y que no saliesen en azul modificando el color en el reset.css con color: "inherit"-->
   </head>
 
   <body>
@@ -45,12 +31,6 @@
       </div>
 
       <nav class="enlaces">
-        <!--se puede poner en css?-->
-        <style>
-          A {
-            text-decoration: none;
-          }
-        </style>
         <a href="./index.html#equipo" class="box">Equipo</a>
 
         <a href="./index.html#quienessomos" class="box">Quiénes somos</a>
@@ -154,12 +134,13 @@
     </main>
 
     <footer class="footer">
-      <h4 class="copy">Equipo Cabra &copy;2018</h4>
+      <h4 class="copy">Equipo Cabra &copy;2021</h4>
       <nav class="navegadorfooter">
         <a href="./index.html#equipo">Equipo</a>
         <a href="./index.html#quienessomos">Quiénes somos</a>
         <a href="./contacto.html" target="blank">Contacto</a>
       </nav>
+      <!--Falta imagen del logo y el cambio de tipografía-->
       <img class="logo" src="" alt="logo Adalab" />
     </footer>
   </body>
