fortalezas y footer a falta de redacción, opacidad y tipografía

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         font-family: "Rubik";
       }
     </style>
-    <!--He eliminado el style que había para suplir el estilo de los enlaces y que no saliesen en azul modificando el color en el reset.css con color: "inherit"-->
+    <!--/IRENE/He eliminado el style que había para suplir el estilo de los enlaces y que no saliesen en azul modificando el color en el reset.css con color: "inherit" también he quitado las líneas de hipervínculo incluyéndolas al reset-->
   </head>
 
   <body>
@@ -60,6 +60,7 @@
         recusandae!
       </section>
       <section class="fortalezas">
+        <!--/IRENE/Falata redactar y solucionar el problema de la opacidad heredada-->
         <article class="articulo">
           <h2 class="title">Fortalezas</h2>
           <p class="parrafo">
