--- a/index.html
+++ b/index.html
@@ -20,37 +20,17 @@
         font-family: "Rubik";
       }
     </style>
-    <!--se puede poner en css?-->
-    <style type="text/css">
-      a {
-        color: #fffcfd;
-      }
-      a:visited {
-        color: #fff9fd;
-      }
-      a:active {
-        color: #fcfcfc;
-      }
-      a:hover {
-        color: #fdfdfd;
-      }
-    </style>
+    <!--/IRENE/He eliminado el style que había para suplir el estilo de los enlaces y que no saliesen en azul modificando el color en el reset.css con color: "inherit" también he quitado las líneas de hipervínculo incluyéndolas al reset-->
   </head>
 
   <body>
     <header class="header">
       <!--imagen de fondo de la cabecera(background)-->
       <div class="nombredelequipo">
-        <h1>Nombre de equipo</h1>
+        <h1 class="nombre">Nombre de equipo</h1>
       </div>
 
       <nav class="enlaces">
-        <!--se puede poner en css?-->
-        <style>
-          A {
-            text-decoration: none;
-          }
-        </style>
         <a href="./index.html#equipo" class="box">Equipo</a>
 
         <a href="./index.html#quienessomos" class="box">Quiénes somos</a>
@@ -59,18 +39,16 @@
       </nav>
     </header>
     <main class="cuerpo">
-      <section>
-        <h2 class="lema">Frase con nuestro lema</h2>
+      <section class="lema">
+        <h2 class="lema_titulo">Frase con nuestro lema</h2>
         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur
         obcaecati unde nemo eum architecto, aspernatur illum autem porro
         molestias eveniet, in sit soluta, incidunt illo beatae earum hic
         voluptates ipsam!Lorem Lorem ipsum dolor, sit amet consectetur
-        adipisicing elit. Assumenda magnam, fugiat aliquam velit commodi
-        facilis, libero officia quo eius numquam nihil pariatur mollitia
-        explicabo? Ex repellendus delectus a repellat vero. Lorem ipsum dolor
-        sit amet consectetur adipisicing elit. Odit neque quas possimus
-        architecto veniam obcaecati sequi! Quasi nobis ea voluptates assumenda
-        quia eius fuga illum non quis, harum quisquam ipsam!
+        adipisicing elit. Assumenda magnam. sit amet consectetur adipisicing
+        elit. Odit neque quas possimus architecto veniam obcaecati sequi! Quasi
+        nobis ea voluptates assumenda quia eius fuga illum non quis, harum
+        quisquam ipsam!
       </section>
       <section>
         <h1 id="equipo">Equipo</h1>
@@ -79,15 +57,26 @@
         adipisci. Aut odit accusamus natus necessitatibus ipsa tempore
         recusandae!
       </section>
-      <section>
-        <h2>Fortalezas</h2>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum libero
-        tenetur placeat id nemo, aut sed consequatur expedita eum ex asperiores
-        adipisci. Aut odit accusamus natus necessitatibus ipsa tempore
-        <h2>Debilidades</h2>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum libero
-        tenetur placeat id nemo, aut sed consequatur expedita eum ex asperiores
-        adipisci. Aut odit accusamus natus necessitatibus ipsa tempore
+      <section class="fortalezas">
+        <!--/IRENE/Falata redactar y solucionar el problema de la opacidad heredada-->
+        <article class="articulo">
+          <h2 class="title">Fortalezas</h2>
+          <p class="parrafo">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum
+            libero tenetur placeat id nemo, aut sed consequatur expedita eum ex
+            asperiores adipisci. Aut odit accusamus natus necessitatibus ipsa
+            tempore
+          </p>
+        </article>
+        <article class="articulo">
+          <h2 class="title">Debilidades</h2>
+          <p class="parrafo">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum
+            libero tenetur placeat id nemo, aut sed consequatur expedita eum ex
+            asperiores adipisci. Aut odit accusamus natus necessitatibus ipsa
+            tempore
+          </p>
+        </article>
       </section>
 
       <section class="quienessomos">
@@ -143,18 +132,14 @@
       </section>
     </main>
 
-    <footer>
-      <hr />
-      <h4>Nombre del grupo &copy;2018</h4>
-      <div>
-        <h5><a href="./index.html#equipo" class="box">Equipo</a></h5>
-        <h5>
-          <a href="./index.html#quienessomos" class="box">Quiénes somos</a>
-        </h5>
-        <h5>
-          <a href="./contacto.html" target="blank" class="box">Contacto</a>
-        </h5>
-      </div>
+    <footer class="footer">
+      <h4 class="copy">Equipo Cabra &copy;2021</h4>
+      <nav class="navegadorfooter">
+        <a href="./index.html#equipo">Equipo</a>
+        <a href="./index.html#quienessomos">Quiénes somos</a>
+        <a href="./contacto.html" target="blank">Contacto</a>
+      </nav>
+      <!--Falta imagen del logo y el cambio de tipografía-->
       <img class="logo" src="" alt="logo Adalab" />
     </footer>
   </body>
