--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       <section class="quienessomos">
         <h1>Quiénes somos</h1>
         <article class="description">
-          <img class="photo" src="./images/FotoMai.jpg" alt="fotomai" />
+          <img class="photo" src="./images/FotoMai.jpg" alt="Foto Mai" />
 
           <h2 class="names">Maitane Abad</h2>
           <!--descripción de Mai-->
@@ -102,7 +102,7 @@
         </article>
 
         <article class="description">
-          <img class="photo" src="" alt="fotoana" />
+          <img class="photo" src="./images/foto Ana.jpg" alt="Foto Ana" />
           <h2 class="names">Ana Redondo</h2>
           <!--descripción de Ana-->
           <p class="text">
@@ -121,7 +121,11 @@
         </article>
 
         <article class="description">
-          <img class="photo" src="./images/fotoperfilpaloma.jpg" alt="Paloma" />
+          <img
+            class="photo"
+            src="./images/fotoperfilpaloma.jpg"
+            alt="Foto Paloma"
+          />
           <h2 class="names">Paloma Lozano</h2>
           <!--descripción de Paloma-->
           <p class="text">
@@ -140,7 +144,7 @@
         </article>
 
         <article class="description">
-          <img class="photo" src="./images/FotoIre.jpg" alt="Irene" />
+          <img class="photo" src="./images/FotoIre.jpg" alt="Foto Irene" />
           <h2 class="names">Irene González</h2>
           <!--descripción de Irene-->
           <p class="text">
