--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <body>
     <header class="header">
       <div class="nombredelequipo">
-        <h1 class="nombre">Equipo Cabra</h1>
+        <h1 class="nombre">Cabra</h1>
       </div>
 
       <nav class="enlaces">
