order change CSS

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </nav>
     </header>
     <main class="cuerpo">
-      <h2 class="lema_titulo">
+      <h2 class="hero">
         Si quieres ir rápido, ve solo. Si quieres llegar lejos, ve acompañado.
       </h2>
 
@@ -52,6 +52,7 @@
           nosotras.
         </p>
       </section>
+      <div class="rombo"></div>
       <section class="fortalezas">
         <article class="articulo">
           <h2 class="title">Fortalezas</h2>
