--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
         </p>
       </section>
       <section class="fortalezas">
+        <p class="rombo"></p>
         <article class="articulo">
           <h2 class="title">Fortalezas</h2>
           <p class="parrafo">
