--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
       </div>
 
       <nav class="enlaces">
-        <a href="./index.html#equipo">Equipo</a>
+        <a class="link" href="./index.html#equipo">Equipo</a>
 
-        <a href="./index.html#quienessomos">Quiénes somos</a>
+        <a class="link" href="./index.html#quienessomos">Quiénes somos</a>
 
-        <a href="./contacto.html" target="blank">Contacto</a>
+        <a class="link" href="./contacto.html" target="blank">Contacto</a>
       </nav>
     </header>
     <main class="cuerpo">
