--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
       <section id="quienessomos" class="quienessomos">
         <h1>Quiénes somos</h1>
-        <article class="description">
+        <article class="description1">
           <img class="photo" src="./images/FotoMai.jpg" alt="Foto Mai" />
 
           <h2 class="names">Maitane Abad</h2>
@@ -93,7 +93,7 @@
           </div>
         </article>
 
-        <article class="description">
+        <article class="description2">
           <img class="photo" src="./images/foto Ana.jpg" alt="Foto Ana" />
           <h2 class="names">Ana Redondo</h2>
           <p class="text">
@@ -112,7 +112,7 @@
           </div>
         </article>
 
-        <article class="description">
+        <article class="description3">
           <img
             class="photo"
             src="./images/fotoperfilpaloma.jpg"
@@ -134,7 +134,7 @@
           </div>
         </article>
 
-        <article class="description">
+        <article class="description4">
           <img class="photo" src="./images/FotoIre.jpg" alt="Foto Irene" />
           <h2 class="names">Irene González</h2>
           <p class="text">
