--- a/src/html/index.html
+++ b/src/html/index.html
@@ -43,7 +43,7 @@
       </hero>
 
       <section class="equipo1">
-        <article class="container.equipo">
+        <article class="containerequipo">
           <h1 id="equipo" class="equipo">Equipo</h1>
           <p class="textoequipo">
             Somos un equipo de desarrolladoras front-end. Estamos comprometidas
