--- a/src/html/contacto.html
+++ b/src/html/contacto.html
@@ -52,7 +52,7 @@
       </section>
     </header>
     <main class="main">
-      <form class="" action="" method="post">
+      <form action="https://formspree.io/f/xoqykqvv" method="post">
         <div>
           <label class="label" for="Name">Nombre completo *</label>
           <input
